crates/roundhouse-provider/tests/snapshots/golden_cohere_v2__cohere_v2_temperature_and_p_and_max_tokens.snap
---
source: crates/roundhouse-provider/tests/golden_cohere_v2.rs
expression: body
---
{
  "model": "command-a-03-2026",
  "messages": [
    {
      "role": "user",
      "content": "Hello."
    }
  ],
  "stream": true,
  "temperature": 0.699999988079071,
  "p": 0.8999999761581421,
  "max_tokens": 512
}
