crates/roundhouse-provider/tests/snapshots/golden_cohere_v2__cohere_v2_thinking_content_block.snap
---
source: crates/roundhouse-provider/tests/golden_cohere_v2.rs
expression: body
---
{
  "messages": [
    {
      "content": [
        {
          "thinking": "Let me work through this step by step.",
          "type": "thinking"
        },
        {
          "text": "The answer is 4.",
          "type": "text"
        }
      ],
      "role": "assistant"
    }
  ],
  "model": "command-a-03-2026",
  "stream": true
}
