crates/roundhouse-provider/tests/snapshots/golden_cohere_v2__cohere_v2_tool_choice_none.snap
---
source: crates/roundhouse-provider/tests/golden_cohere_v2.rs
expression: body
---
{
  "messages": [
    {
      "content": "Hello.",
      "role": "user"
    }
  ],
  "model": "command-a-03-2026",
  "stream": true,
  "tool_choice": "NONE",
  "tools": [
    {
      "function": {
        "description": "Get the current weather",
        "name": "get_weather",
        "parameters": {
          "$schema": "https://json-schema.org/draft/2020-12/schema",
          "title": "NoParams",
          "type": "object"
        }
      },
      "type": "function"
    }
  ]
}
