crates/roundhouse-provider/tests/snapshots/golden_cohere_v2__cohere_v2_tool_choice_required.snap
---
source: crates/roundhouse-provider/tests/golden_cohere_v2.rs
expression: body
---
{
  "model": "command-a-03-2026",
  "messages": [
    {
      "role": "user",
      "content": "What's the weather in Tokyo?"
    }
  ],
  "stream": true,
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "get_weather",
        "description": "Get the current weather",
        "parameters": {
          "$schema": "https://json-schema.org/draft/2020-12/schema",
          "title": "NoParams",
          "type": "object"
        }
      }
    }
  ],
  "tool_choice": "REQUIRED"
}
