crates/roundhouse-provider/tests/snapshots/golden_cohere_v2__cohere_v2_tool_result_is_error.snap
---
source: crates/roundhouse-provider/tests/golden_cohere_v2.rs
expression: body
---
{
  "messages": [
    {
      "content": "permission denied",
      "role": "tool",
      "tool_call_id": "call_1"
    }
  ],
  "model": "command-a-03-2026",
  "stream": true
}
