crates/roundhouse-provider/tests/snapshots/golden_cohere_v2__cohere_v2_unicode_content.snap
---
source: crates/roundhouse-provider/tests/golden_cohere_v2.rs
expression: enc(&req)
---
{
  "messages": [
    {
      "content": "こんにちは 🌍 — café naïve",
      "role": "user"
    }
  ],
  "model": "command-a-03-2026",
  "stream": true
}
